--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -109,7 +109,7 @@ dostupné kontexty serveru. Tato metoda je využ\'{\i}vána pro administraci
 kontextů, kdy je potřeba z\'{\i}skat všechny kontexty všech služeb, aby
 nad nimi mohly prob\'{\i}hat úpravy a anal\'yzy.
 
-\paragraph{UpdateOrSaveContext()} slouž\'{\i} pro uložen\'{\i} nového či
+\paragraph{SaveOrUpdateContext()} slouž\'{\i} pro uložen\'{\i} nového či
 editovaného pravidla, které je zasláno v serializované podobě
 jako argument typu \code{BusinessContextUpdateRequestMessage}.
 Tato procedura může být volána pouze pokud byla nejprve spuštěna transakce.
