--- a/content/chapter-06-testovani.tex
+++ b/content/chapter-06-testovani.tex
@@ -281,7 +281,7 @@ vid\'{\i}me, na které užitné př\'{\i}pady se pravidlo aplikuje, a jak\'y je 
 
 Dále jsou v tabulce~\ref{tbl:business-contexts} vypsány všechny byznysové kontexty v ukázkové aplikaci.
 Některé z nich jsou konkrétn\'{\i} a jsou namapovány na jeden nebo v\'{\i}ce \gls{UC},
-jiné jsou abstraktn\'{\i} a slouž\'{\i} ostatn\'{\i} kontexty je rozšiřuj\'{\i}.
+jiné jsou abstraktn\'{\i} a ostatn\'{\i} kontexty od nich dědí a sdílejí jejich byznysová pravidla.
 Prefixy byly vybrány na základě byznysové domény, ke které se kontext vztahuje, stejně jako
 jsou podle domén děleny i jednotlivé služby systému.
 
