--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -235,7 +235,7 @@ potřebného pro popis adaptibilního uživatelského rozhraní.
 
 Dokumentace je také částí informačního systému, do které se promítají
 jeho aspekty~\cite{cemus2017automated}. Autoři \gls{ADDA}
-využívají data mining pro získání metainformací o byznysových operacích,
+využívají data mining pro získání meta-informací o byznysových operacích,
 datovém modelu systému a o byznysových pravidlech. To je umožněno
 díky soustředění těchto aspektů v \textit{single-focal point} a použití \gls{DSL} pro jejich popis.
 Díky tomu lze automaticky vygenerovat seznam byznysových operací, potažmo implementovaných
